bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:3: error: '(' expected but identifier found.
  if negative==true {if ((a<0 && b<0)) return true}
     ^PosNeg:5: error: illegal start of simple expression
} 
^